<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HellaDroid</string>
	<string name="description">This is an Android application which utilizes XMLRPC to monitor a running HellaNZB process on a remote server.</string>
	<string name="description_help">For any questions, bug reports, feature requests, please refer to http://code.google.com/p/helladroid</string>
	<string name="description_analytics">This application uses Google Analytics to track user activity which are used for development purposes.</string>
	<string name="description_credit">Thank you zalzice for the logo.</string>
	
	<string name="setting_server_url">HellaNZB server address</string>
	<string name="setting_server_port">HellaNZB server port</string>
	<string name="setting_server_password">Password</string>
	<string name="setting_server_url_default">http://</string>
	<string name="setting_server_port_default">8760</string>
	<string name="setting_server_password_default">changeme</string>
	<string name="setting_newzbin_username">NewzBin login username</string>
	<string name="setting_newzbin_password">NewzBin login password</string>
	<string name="setting_nzbmatrix_username">NzbMatrix login username</string>
	<string name="setting_nzbmatrix_apikey">NzbMatrix API Key</string>
	<string name="setting_retention">Your usenet providers retention (def: 7 days)</string>
	<string name="setting_search_limit">Number of search results shown (def: 10)</string>
	<string name="setting_search_limit_matrix">Number of search results shown (def: 15)</string>
	
	<string name="options_menu_AddNzbID">Add NZB</string>
	<string name="options_menu_Pause">Continue/Pause</string>
	<string name="options_menu_RefreshQueue">Refresh</string>
	<string name="options_menu_Preferences">Preferences</string>
	<string name="options_menu_Search">Search</string>
	<string name="options_menu_Search_Next">Next</string>
	<string name="options_menu_Search_Previous">Previous</string>
	<string name="options_menu_About">About</string>
	<string name="options_menu_Download">Download</string>
	<string name="options_menu_Related">Related</string>
	<string name="options_menu_Comments">Comments</string>
	
	<string name="context_DownloadNow">Download Now</string>
	<string name="context_DownloadNext">Download Next</string>
	<string name="context_DownloadLast">Download Last</string>
	<string name="context_MoveUp">Move Up</string>
	<string name="context_MoveDown">Move Down</string>
	<string name="context_Dequeue">Remove</string>
	
	<string name="msg_server_down">Server appears to be offline, doublecheck settings</string>
	<string name="msg_nzb_continue">Continuing download..</string>
	<string name="msg_nzb_pause">Pausing download..</string>
	<string name="msg_enqueue_newzbin">NewzBin ID enqueued..</string>
	<string name="msg_enqueue_nzb">NZB enqueued..</string>
	<string name="msg_empty_search_string">Missing search string</string>
	<string name="msg_nzb_removed">NZB removed..</string>
	<string name="msg_empty_input">You forgot to enter any text!</string>
	
	<string name="search_category_prompt">Choose category</string>
	<string name="search_quality_prompt">Choose quality</string>
	<string name="search_provider_prompt">Choose provider</string>
	
	<string name="detailedTitleLabel">Title:</string>
	<string name="detailedStatusLabel">Status:</string>
	<string name="detailedProgressLabel">Progress:</string>
	<string name="detailedUrlLabel">More info:</string>
	<string name="detailedPosterLabel">Poster:</string>
	<string name="detailedReportedLabel">Reported:</string>
	<string name="detailedSizeLabel">Size:</string>
	<string name="detailedNewsgroupsLabel">Newsgroups:</string>
	<string name="detailedAttributesLabel">Attributes:</string>
	
	<string name="detailedCategoryLabel">Category:</string>
	<string name="detailedLanguageLabel">Language:</string>
</resources>
