<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android_layout_height="fill_parent">
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<EditText 
			android:id="@+id/searchString" 
			android:layout_width="250px"
			android:layout_height="wrap_content" 
			android:singleLine="true"
			/>
		<Spinner
			android:id="@+id/searchProvSpinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/search_provider_prompt"
			android:entries="@array/searchProv" 
			/>
		<Spinner 
			android:id="@+id/searchCatgegoryMatrixSpinner" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:prompt="@string/search_category_prompt"
			android:entries="@array/searchCategoryNzbMatrix"
			android:visibility="gone"
			/>
		<Spinner 
			android:id="@+id/searchCatgegorySpinner" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:prompt="@string/search_category_prompt"
			android:entries="@array/searchCategoryTypes"
			android:visibility="gone"
			/>
		<Spinner
			android:id="@+id/searchQualitySpinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/search_quality_prompt"
			android:entries="@array/searchQuality"
			android:visibility="gone"
			/>
	</LinearLayout>
</ScrollView>